# solana-science

./: README.md  index.html
client/: UI.gd  UI.tscn  book_icon_picker.gd  book_icon_picker.tscn  book_pile.gd  book_pile.tscn  book_pile_2.tscn  book_pile_3.tscn  export_presets.cfg  house.gd  house.tscn  icon.svg.import  main.gd  main.tscn  project.godot  shelf_books.gd  shelf_books.tscn  solana_science.json  title_screen.gd  title_screen.tscn
client/export/: client.apple-touch-icon.png.import  client.html  client.icon.png.import  client.png.import
client/icons/: 95e26464-a6f9-4f1f-8add-c9c37ee80b14.jpg.import  bg.png.import  book1.png.import  book2.png.import  book3.png.import  coins.png.import  light.jpg.import  light.png.import
client/materials/: beard.tres  book_cover_brown.tres  couch.tres  jeans.tres  page.tres  wook.tres
client/models/: 5936a836-579e-4c73-96c1-439b7d64e64f.jpg.import  951016_ra400.webp.import  afb3e8ba-1fd1-4a89-bfe5-c707973cca9d.jpg.import  albedo.png.import  book.jpg.import  books.blend  books.blend.import  books.blend1  books1.dae  books1.dae.import  books2.glb  books2.glb.import  books2_5936a836-579e-4c73-96c1-439b7d64e64f.jpg.import  books3.glb  books3.glb.import  books3_afb3e8ba-1fd1-4a89-bfe5-c707973cca9d.jpg.import  progress.blend  progress.blend.import  progress.blend1  progress.glb  progress.glb.import  progress_bar.glb  progress_bar.glb.import  scientist.blend  scientist.blend.import  scientist.blend1  (+8 more)
program/solana-science/programs/solana-science/: Cargo.toml
program/solana-science/programs/solana-science/src/: lib.rs
(+21 files in other folders)
